css/custom.css
/* Pretty blockquotes */
blockquote:before {}


/* Center vertically */
.is-vertically-centered {
    position: absolute;
    top: 50%;
    transform: translateY(-50%);
}

/* Drop shadows*/

.has-box-shadow {
    box-shadow: #00000080 0 0 5px 0;
}

/* Rounded corners */

.has-rounded-corners {
    border-radius: 1em;
}

/* Smooth transition fader */

#fader {
    position: fixed;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
    z-index: 999999;
    pointer-events: none;
    background: white;
    animation-duration: 300ms;
    animation-timing-function: ease-in-out;
}

@keyframes fade-out {
    from {
        opacity: 1
    }

    to {
        opacity: 0
    }
}

@keyframes fade-in {
    from {
        opacity: 0
    }

    to {
        opacity: 1
    }
}

#fader.fade-out {
    opacity: 0;
    animation-name: fade-out;
}

#fader.fade-in {
    opacity: 1;
    animation-name: fade-in;
}

/* Team speech bubbles */

.team-speech-bubble {
    position: relative;
    background: #b5bec1;
    border-radius: .4em;
}

.team-speech-bubble:before {
    content: '';
    position: absolute;
    top: 3px;
    right: 3px;
    bottom: 3px;
    left: 3px;
    background: #ffffff;
    border-radius: 3px;
}

.team-speech-bubble:after {
    content: '';
    position: absolute;
    border: 18px solid transparent;
    width: 0;
    height: 0;
    /* Arrow tip settings */
    left: 0;
    top: 40px;
    border-right-color: #b5bec1;
    border-left: 0;
    border-top: 0;
    margin-top: 0px;
    margin-left: -17px;
}

:focus {
    outline: none;
}

.slider-container img {
    display: block;
    margin: auto;
}

.carousel {
    overflow: hidden;
}

.carousel img {
    cursor: pointer;
}

.carousel .slider-pagination {
    display: none;
}

.twitter-tweet.twitter-tweet-rendered {
    padding: 0 10px;
}

.navbar-menu {
    box-shadow: none;
}

.presskit .card img {
    margin: 0;
    cursor: pointer;
}

.presskit .gallery {
    margin-top: 0rem;
    padding: 0 0.75rem;
}

.tile .is-parent {
    padding: 0;
}

.tile .is-child {
    padding: 0.75rem;
}

